# timingapp-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/timingapp/: __init__.py  _base.py  _database.py  _export.py  _types.py
src/timingapp/models/: __init__.py  app_activity.py  app_activity_with_strings.py  application.py  device.py  event.py  event_source.py  event_source_task_activity.py  filter.py  integration.py  integration_log_result.py  integration_project.py  path.py  project.py  task_activity.py  title.py
tests/: conftest.py  test_app_activity.py  test_database.py  test_integration.py  test_models_basic.py  test_project.py  test_task_activity.py  test_types.py
